[gd_scene load_steps=4 format=1]

[ext_resource path="res://highscores/scores3.tex" type="Texture" id=1]
[ext_resource path="res://highscores/HighScores.gd" type="Script" id=2]
[ext_resource path="res://dejavumono-20.fnt" type="Font" id=3]

[node name="highscores" type="TextureFrame"]

margin/left = 68.0
margin/top = 242.0
margin/right = 420.0
margin/bottom = 547.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
texture = ExtResource( 1 )
expand = true
script/script = ExtResource( 2 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="highscore_label" type="Label" parent="."]

margin/left = 16.0
margin/top = 22.0
margin/right = 185.0
margin/bottom = 43.0
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.980392, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.937255, 0.258824, 0.258824, 1 )
text = "High Scores"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="highscore0" type="Label" parent="."]

margin/left = 32.0
margin/top = 80.0
margin/right = 224.0
margin/bottom = 101.0
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.980392, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.937255, 0.258824, 0.258824, 1 )
text = "1.........60.000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="highscore1" type="Label" parent="."]

margin/left = 32.0
margin/top = 120.0
margin/right = 224.0
margin/bottom = 141.0
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.980392, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.937255, 0.258824, 0.258824, 1 )
text = "2.........40.000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="highscore2" type="Label" parent="."]

margin/left = 32.0
margin/top = 160.0
margin/right = 224.0
margin/bottom = 181.0
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.980392, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.937255, 0.258824, 0.258824, 1 )
text = "3.........20.000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="highscore3" type="Label" parent="."]

margin/left = 32.0
margin/top = 200.0
margin/right = 224.0
margin/bottom = 221.0
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.980392, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.937255, 0.258824, 0.258824, 1 )
text = "4.........10.000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="highscore4" type="Label" parent="."]

margin/left = 32.0
margin/top = 240.0
margin/right = 224.0
margin/bottom = 261.0
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.980392, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.937255, 0.258824, 0.258824, 1 )
text = "5..........5.000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


